--- a/MVC/Views/VehicleMake/Create.cshtml
+++ b/MVC/Views/VehicleMake/Create.cshtml
@@ -1,4 +1,4 @@
-@model Service.Models.VehicleMake
+@model MVC.Models.VehicleMake.VehicleMakeVM
 
 <!DOCTYPE html>
 <html>
@@ -12,15 +12,15 @@
         
         <form method="post" class="mt-4">
             <div class="mb-3">
-                <label for="Name" class="form-label">Name:</label>
-                <input type="text" asp-for="Name" id="Name" name="Name" class="form-control">
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label for="VehicleMake.Name" class="form-label">Name:</label>
+                <input type="text" asp-for="VehicleMake.Name" id="VehicleMake.Name" name="VehicleMake.Name" class="form-control">
+                <span asp-validation-for="VehicleMake.Name" class="text-danger"></span>
             </div>
     
             <div class="mb-3">
-                <label for="Abrv" class="form-label">Abbreviation:</label>
-                <input type="text" asp-for="Abrv" id="Abrv" name="Abrv" class="form-control">
-                <span asp-validation-for="Abrv" class="text-danger"></span>
+                <label for="VehicleMake.Abrv" class="form-label">Abbreviation:</label>
+                <input type="text" asp-for="VehicleMake.Abrv" id="VehicleMake.Abrv" name="VehicleMake.Abrv" class="form-control">
+                <span asp-validation-for="VehicleMake.Abrv" class="text-danger"></span>
             </div>
     
             <div class="d-grid gap-2">
