Dodano PaginatedList u kojem se nalaze podaci koji su prijašnje bili u VM klasama, dodana QueryParams klasa koju pozivam umjesto da koristim primitivne tipove

--- a/MVC/Views/VehicleModel/Index.cshtml
+++ b/MVC/Views/VehicleModel/Index.cshtml
@@ -18,7 +18,7 @@
             <div class="col">
                 <form method="get">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon2" name="searchString" value="@Model.SearchString">
+                        <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon2" name="searchString" value="@Model.Pagination.SearchString">
                         <button class="btn btn-outline-secondary" type="submit">Search</button>
                     </div>
                 </form>
@@ -30,10 +30,10 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th><a href="@Url.Action("Index", new { page = Model.CurrentPage, searchString = Model.SearchString, sortOrder = "id_asc" })">Id</a></th>
-                    <th><a href="@Url.Action("Index", new { page = Model.CurrentPage, searchString = Model.SearchString, sortOrder = "name_asc" })">Name</a></th>
-                    <th><a href="@Url.Action("Index", new { page = Model.CurrentPage, searchString = Model.SearchString, sortOrder = "make_asc" })">Make Name</a></th>
-                    <th><a href="@Url.Action("Index", new { page = Model.CurrentPage, searchString = Model.SearchString, sortOrder = "abrv_asc" })">Make Abrv</a></th>
+                    <th><a href="@Url.Action("Index", new { page = Model.Pagination.CurrentPage, searchString = Model.Pagination.SearchString, sortOrder = "id_asc" })">Id</a></th>
+                    <th><a href="@Url.Action("Index", new { page = Model.Pagination.CurrentPage, searchString = Model.Pagination.SearchString, sortOrder = "name_asc" })">Name</a></th>
+                    <th><a href="@Url.Action("Index", new { page = Model.Pagination.CurrentPage, searchString = Model.Pagination.SearchString, sortOrder = "make_asc" })">Make Name</a></th>
+                    <th><a href="@Url.Action("Index", new { page = Model.Pagination.CurrentPage, searchString = Model.Pagination.SearchString, sortOrder = "abrv_asc" })">Make Abrv</a></th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -56,26 +56,26 @@
     </div>
 
     <div class="container pagination">
-        @if (Model.TotalPages > 1)
+        @if (Model.Pagination.TotalPages > 1)
         {
             <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
-                    @if (Model.CurrentPage > 1)
+                    @if (Model.Pagination.CurrentPage > 1)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="@Url.Action("Index", new { page = Model.CurrentPage - 1, searchString = Model.SearchString })">Previous</a>
+                            <a class="page-link" href="@Url.Action("Index", new { page = Model.Pagination.CurrentPage - 1, searchString = Model.Pagination.SearchString })">Previous</a>
                         </li>
                     }
-                    @for (var i = 1; i <= Model.TotalPages; i++)
+                    @for (var i = 1; i <= Model.Pagination.TotalPages; i++)
                     {
-                        <li class="page-item @(Model.CurrentPage == i ? "active" : "")">
-                            <a class="page-link" href="@Url.Action("Index", new { page = i, searchString = Model.SearchString })">@i</a>
+                        <li class="page-item @(Model.Pagination.CurrentPage == i ? "active" : "")">
+                            <a class="page-link" href="@Url.Action("Index", new { page = i, searchString = Model.Pagination.SearchString })">@i</a>
                         </li>
                     }
-                    @if (Model.CurrentPage < Model.TotalPages)
+                    @if (Model.Pagination.CurrentPage < Model.Pagination.TotalPages)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="@Url.Action("Index", new { page = Model.CurrentPage + 1, searchString = Model.SearchString })">Next</a>
+                            <a class="page-link" href="@Url.Action("Index", new { page = Model.Pagination.CurrentPage + 1, searchString = Model.Pagination.SearchString })">Next</a>
                         </li>
                     }
                 </ul>
