--- a/MVC/Views/VehicleModel/Index.cshtml
+++ b/MVC/Views/VehicleModel/Index.cshtml
@@ -1,5 +1,5 @@
-@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model MVC.Models.VehicleModel.ModelListVM
+@using Microsoft.AspNetCore.Mvc.Rendering
 
 <!DOCTYPE html>
 <html>
