Dodan ispis u konzolu kao provjera koji podaci se šalju, scoped promjenjen u Transient. Dodan novi view i nova metoda koja ubacuje Abrv u create metodi koja i dalje ne radi iz nepoznatog razloga.

--- a/MVC/Views/VehicleModel/Create.cshtml
+++ b/MVC/Views/VehicleModel/Create.cshtml
@@ -1,4 +1,4 @@
-    @model MVC.Models.VehicleModel.CreateModelVM
+    @model MVC.Models.VehicleModel.CreateModelVm
 
     <!DOCTYPE html>
     <html>
